[tool.poetry]
name = "qbs192-twitter-course"
version = "0.1.0"
description = "Tweepy API tutorial for scraping and analyzing Twitter data"
authors = ["Luca Lit"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.14.0"
pandas = "^2.2.3"
textblob = "^0.17.1"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
